tests/data/invalid_dtds/parameter_entities_external_2/test.dtd
<!ENTITY % external2 SYSTEM "foo" garbage>
